# syncthing-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SKILL.md  deploy-local.sh  docker-compose.tunnel.yml  docker-compose.yml  pyproject.toml  stallari-plugin.yaml  syncthing_mcp.py
.github/workflows/: release.yml
src/syncthing_mcp/: __init__.py  __main__.py  auth.py  client.py  formatters.py  models.py  registry.py  server.py
src/syncthing_mcp/tools/: __init__.py  config.py  devices.py  folders.py  instances.py  system.py
tests/: conftest.py  test_client.py  test_models.py  test_registry.py  test_tools_config.py  test_tools_devices.py  test_tools_folders.py  test_tools_system.py
