[project]
name = "syncthing-mcp"
version = "0.1.0"
description = "MCP server for Syncthing — query folder replication status and identify datasets safe to remove locally."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
