[project]
name = "syncthing-mcp"
version = "0.2.0"
description = "MCP server for Syncthing — query folder replication status, manage configuration, and identify datasets safe to remove locally."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "piersdd" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.urls]
Homepage = "https://github.com/piersdd/syncthing-mcp"
Repository = "https://github.com/piersdd/syncthing-mcp"
Issues = "https://github.com/piersdd/syncthing-mcp/issues"
Changelog = "https://github.com/piersdd/syncthing-mcp/blob/main/CHANGELOG.md"

[project.scripts]
syncthing-mcp = "syncthing_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syncthing_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
